[package]
name = "flapypan-blog-daemon"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winnt", "handleapi", "processthreadsapi", "psapi"] }
[dependencies]
csv = "1.3"
env_logger = "0.10"
log = "0.4"
reqwest = "0.11"
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
